reta final de alteração 90%

--- a/css/about.css
+++ b/css/about.css
@@ -10,6 +10,14 @@ body {
   background-color: #f4f4f4;
   color: #333;
 }
+:root{
+  --color-one: #6F2C3E;
+  --color-two: #fff;
+  --color-tree: #FFC300;
+  --color-fowr:  #4A4A4A;
+  --color-five: #333;
+  --color-six: #FFD700;
+}
 
 .container {
   width: 90%;
@@ -18,33 +26,104 @@ body {
 }
 
 /* Navbar */
-.navbar {
-  background-color: #6F2C3E;
-  padding: 15px 0;
+.navigation {
+  position: relative;
+  width: 100%;
+  height: 100px;
+  background: var(--color-one);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.navigation img {
+ width:250px;
+ margin:0 10px
+  
 }
 
-.navbar .logo {
-  font-size: 24px;
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
+
+.navigation ul{
+  display: flex;
+  width: -40px;
+  margin-left: 880px;
+}
+
+
+.navigation ul li{
+  position: relative;
+  list-style: none;
+  width: 7rem;
+  height: 70px;
+  z-index: 1;
+}
+
+
+.navigation ul li a{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  text-align: center;
+  font-weight: 500;
+  color: var(--color-two);
+    
+}
+
+.navigation ul li a .icon{
+  position: relative;
+  display: block;
+  line-height: 85px;
+  font-size: 2rem;
+  text-align: center;
+  transition: 0.5s;
+  color: var(--color-two);
+}
+
+.navigation ul li:hover a .icon{
+  transform: translateY(-35px);  color: #FFD700;
+}
+
+.navigation ul li a .text{
+  position: absolute;
+  color: var(--color-two);
+  font-weight: 400;
+  font-size: 1rem;
+  letter-spacing: 0.05rem;
+  transition: 0.5s;
+  opacity: 0;
+  transform: translateY(20px);
+}
+
+.navigation ul li:hover a .text{
+opacity: 1;
+transform: translateY(10px);
+}
+
+
+.container {
+  max-width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+
+
+.logo {
   margin-left: 20px;
-}
-
-.navbar .menu {
-  float: right;
-  margin-right: 20px;
-}
-
-.navbar .menu-link {
-  color: #fff;
-  margin: 0 15px;
+  width: 10px;
+  font-size: 30px;
+  font-weight: bold;
+  color: var(--color-six);
   text-decoration: none;
-  font-weight: 600;
+  transition: color 0.3s;
 }
 
-.navbar .menu-link:hover {
-  color: #ffcc00;
+.logo:hover {
+  color: var(--color-tree);
 }
 
 /* Seção "Sobre Nós" */
@@ -140,9 +219,12 @@ body {
 /* Grid e Cards */
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 30px;
-  justify-items: center;
+  grid-template-columns: repeat(3, 1fr); /* 3 colunas */
+  justify-content: center;
+  gap: 2rem;
+  margin-top: 2.5rem;
+  justify-content: center; /* Centraliza os cards */
+    align-items: stretch; 
 }
 
 .card {
