--- a/css/talkme.css
+++ b/css/talkme.css
@@ -1,60 +1,127 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+:root{
+  --color-one: #6F2C3E;
+  --color-two: #fff;
+  --color-tree: #FFC300;
+  --color-fowr:  #4A4A4A;
+  --color-five: #333;
+  --color-six: #FFD700;
+}
 body {
     margin: 0;
     font-family: "Poppins", sans-serif;
-    background-color: #f3f4f6;
+    
+    background-image: url('/img/logo-f.png');
+  background-size: 10%;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 /* Navbar */
-.navbar {
-    background-color: #6F2C3E;
-    color: white;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    position: relative;
-    z-index: 50;
+.navigation {
+  position: relative;
+  width: 100%;
+  height: 100px;
+  background: var(--color-one);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
+.navigation img {
+ width:250px;
+ margin:0 10px
+  
+}
+
+
+.navigation ul{
+  display: flex;
+  width: -40px;
+  margin-left: 880px;
+}
+
+
+.navigation ul li{
+  position: relative;
+  list-style: none;
+  width: 7rem;
+  height: 70px;
+  z-index: 1;
+}
+
+
+.navigation ul li a{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  text-align: center;
+  font-weight: 500;
+  color: var(--color-two);
+    
+}
+
+.navigation ul li a .icon{
+  position: relative;
+  display: block;
+  line-height: 85px;
+  font-size: 2rem;
+  text-align: center;
+  transition: 0.5s;
+  color: var(--color-two);
+}
+
+.navigation ul li:hover a .icon{
+  transform: translateY(-35px);  color: #FFD700;
+}
+
+.navigation ul li a .text{
+  position: absolute;
+  color: var(--color-two);
+  font-weight: 400;
+  font-size: 1rem;
+  letter-spacing: 0.05rem;
+  transition: 0.5s;
+  opacity: 0;
+  transform: translateY(20px);
+}
+
+.navigation ul li:hover a .text{
+opacity: 1;
+transform: translateY(10px);
+}
+
 
 .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 24px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 64px;
+  max-width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
 }
 
+
+
 .logo {
-    font-size: 24px;
-    font-weight: bold;
-    color: #FFD700; /* Amarelo */
-    transition: color 0.3s;
+  margin-left: 20px;
+  width: 10px;
+  font-size: 30px;
+  font-weight: bold;
+  color: var(--color-six);
+  text-decoration: none;
+  transition: color 0.3s;
 }
 
 .logo:hover {
-    color: #FFC107; /* Amarelo mais claro */
+  color: var(--color-tree);
 }
-
-.nav-links {
-    display: flex;
-    gap: 32px;
-}
-
-.nav-links a {
-    text-decoration: none;
-    color: white;
-    transition: color 0.3s;
-}
-
-.nav-links a:hover {
-    color: #FFC107;
-}
-
-/* Seção de Contato */
 /* Seção de Contato */
 .contact-section {
-  background-color: #ffffff;
+  
   padding: 40px 20px;
   text-align: center;
 }
@@ -238,7 +305,7 @@ body {
   padding: 0;
 }
 
-.footer-link a {
+.footer-link {
   display: flex;
   align-items: center;
   font-size: 0.875rem;
@@ -254,6 +321,31 @@ body {
 
 .footer-link i {
   margin-right: 0.5rem;
-  color: #A0A0A0;
+}
+.whatsapp-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 60px;
+  height: 60px;
+  background-color: #25d366;
+  border-radius: 50%;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.whatsapp-button:hover {
+  transform: scale(1.1);
+}
+
+/* Ícone do WhatsApp */
+.whatsapp-icon {
+  width: 35px;
+  height: 35px;
 }
 
