--- a/css/talkme.css
+++ b/css/talkme.css
@@ -1,4 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+
 :root{
   --color-one: #6F2C3E;
   --color-two: #fff;
@@ -7,17 +15,7 @@
   --color-five: #333;
   --color-six: #FFD700;
 }
-body {
-    margin: 0;
-    font-family: "Poppins", sans-serif;
-    
-    background-image: url('/img/logo-f.png');
-  background-size: 10%;
-  height: 100vh;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
-}
+
 
 /* Navbar */
 .navigation {
