--- a/css/index.css
+++ b/css/index.css
@@ -15,23 +15,15 @@
   --color-six: #FFD700;
 }
 /* Body */
-.html, body{
-  overflow: auto;
-  scroll-behavior: smooth;
-  
-}
-.hidden {
-  opacity: 0;
-  transform: translateY(20px);
-  transition: opacity 0.5s ease-out, transform 0.5s ease-out;
-}
-
-.visible {
-  opacity: 1;
-  transform: translateY(0);
-}
 
 
+body.bg-cover {
+  background-size: 100vw;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+}
 
 /* Navbar */
 .navigation {
@@ -44,23 +36,24 @@
   justify-content: space-between;
 }
 .navigation img {
- width:250px;
- margin:0 10px
-  
+width:250px;
+padding: 12px;
+margin: 22px;
+
 }
 
 
 .navigation ul{
   display: flex;
-  width: -40px;
-  margin-left: 880px;
+  width: -20px;
+  margin-left: 660px;
 }
 
 
 .navigation ul li{
   position: relative;
   list-style: none;
-  width: 7rem;
+  width: 6rem;
   height: 70px;
   z-index: 1;
 }
@@ -90,7 +83,7 @@
 }
 
 .navigation ul li:hover a .icon{
-  transform: translateY(-35px);  color: #FFD700;
+  transform: translateY(-35px);  color: var(--color-six);
 }
 
 .navigation ul li a .text{
@@ -133,10 +126,12 @@ transform: translateY(10px);
 .logo:hover {
   color: var(--color-tree);
 }
+
 /* Section Hero */
 .hero-section {
   position: relative;
-  height: 60vh;
+  height: 80vh;
+  width: 100%;
   background-image: url('/img/Fundo\ Porto\ Alegre\ em\ branco.png');
   background-size: cover;
   background-position: center;
@@ -145,7 +140,7 @@ transform: translateY(10px);
 .overlay {
   position: absolute;
   inset: 0;
-  background-color: black;
+  background-color: var(--color-five);
   opacity: 0.5;
 }
 
@@ -159,7 +154,7 @@ transform: translateY(10px);
 }
 
 .hero-box {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color:rgba(255, 255, 255, 0.8);
   padding: 32px;
   border-radius: 8px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -226,7 +221,6 @@ transform: translateY(10px);
   font-size: 16px;
   color: #666;
   margin-bottom: 16px;
-  text-align: justify;
 }
 
 .presentation-button {
@@ -238,7 +232,6 @@ transform: translateY(10px);
   text-decoration: none;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   transition: background-color 0.3s ease;
-  margin-left: 41%;
 }
 
 .presentation-button:hover {
@@ -268,16 +261,26 @@ transform: translateY(10px);
 /* Services Grid */
 /* Grid de Serviços */
 .services-grid {
-  display:grid;
+  display: grid;
   grid-template-columns: repeat(3, 1fr); /* 3 colunas */
   justify-content: center;
   gap: 2rem;
   margin-top: 2.5rem;
- 
+  justify-content: center; /* Centraliza os cards */
     align-items: stretch; /* Mantém os cards alinhados */
 }
 
+@media (min-width: 640px) {
+  .services-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 
+@media (min-width: 1024px) {
+  .services-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
 
 /* Card de Serviço */
 .service-card {
@@ -357,9 +360,24 @@ transform: translateY(10px);
 
 /* Services Grid */
 /* Grid de Serviços */
+.services-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 2rem;
+  margin-top: 2.5rem;
+}
 
+@media (min-width: 640px) {
+  .services-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 
-
+@media (min-width: 1024px) {
+  .services-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
 
 /* Card de Serviço */
 .service-card {
@@ -599,88 +617,3 @@ transform: translateY(10px);
   width: 35px;
   height: 35px;
 }
-@media only screen and (max-width: 375px) {
-  *{
-    box-sizing: border-box;
-    margin:0;
-    padding: 0;
-    max-width: 100%;
-  }
-
-  html, body{
-    background-color: white;
-    width: 100%;
-    overflow-x: hidden;
-    padding-top: env(safe-area-inset-top);
-    padding-bottom: env(safe-area-inset-bottom);
-    }
-  
-    .navigation {
-      flex-direction: column;
-      height: auto;
-      padding: 10px 0;
-    }
-  
-    .navigation img {
-      width: 150px; 
-      margin-bottom: 10px;
-    }
-  
-    .navigation ul {
-      flex-direction: row;
-      justify-content: center;
-      width: 100%;
-      gap: 10px;
-      margin-left: -52%;
-        margin-top: 64px;
-    }
-  
-    .navigation ul li a {
-      font-size: 0.9rem;
-      padding: 5px;
-    }
-  
-    .navigation ul li a .icon {
-      font-size: 1.2rem;
-    }
-    .hero-section {
-      height: auto;
-      ;
-    }
-  
-    .services-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 2rem;
-      margin-top: 2.5rem;
-      margin-left: -14%;
-    }
-    .presentation-content {
-      
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-     
-    }
-      
-   
-  
-    .presentation-title {
-      font-size: 24px;
-    }
-  
-    .presentation-description {
-      font-size: 19px;
-      word-spacing: 8px;
-
-    }
-  
-    .presentation-button {
-      padding: 10px 20px;
-      font-size: 14px;
-      text-align: center;
-      margin-left: 0px;
-    }
-  
-}
-
