--- a/css/index.css
+++ b/css/index.css
@@ -113,20 +113,6 @@ transform: translateY(10px);
 
 
 
-.logo {
-  margin-left: 20px;
-  width: 10px;
-  font-size: 30px;
-  font-weight: bold;
-  color: var(--color-six);
-  text-decoration: none;
-  transition: color 0.3s;
-}
-
-.logo:hover {
-  color: var(--color-tree);
-}
-
 /* Section Hero */
 .hero-section {
   position: relative;
@@ -141,7 +127,7 @@ transform: translateY(10px);
   position: absolute;
   inset: 0;
   background-color: var(--color-five);
-  opacity: 0.5;
+  opacity: 0.2;
 }
 
 .hero-content {
@@ -150,7 +136,7 @@ transform: translateY(10px);
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 50%;
 }
 
 .hero-box {
@@ -165,7 +151,7 @@ transform: translateY(10px);
 .hero-title {
   font-size: 24px;
   font-weight: bold;
-  color: #6F2C3E;
+  color: var(--color-one);
   margin-bottom: 16px;
 }
 
@@ -186,6 +172,7 @@ transform: translateY(10px);
 .hero-button:hover {
   background-color: #5B2A36;
 }
+
 
 /* Presentation Section */
 .presentation-container {
@@ -213,20 +200,24 @@ transform: translateY(10px);
   font-weight: 600;
   color: #333;
   text-align: center;
-  text-decoration: underline;
-  margin-bottom: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin-bottom: 2px;
+  top: 0;
 }
 
 .presentation-description {
+  text-align: center;
   font-size: 16px;
   color: #666;
   margin-bottom: 16px;
+  margin-right: -12px;
 }
 
 .presentation-button {
-  display: inline-block;
-  background-color: #6F2C3E;
-  color: white;
+  margin-inline-start: 400px;
+  background-color: var(--color-one);
+  color: var(--color-two);
   padding: 12px 24px;
   border-radius: 8px;
   text-decoration: none;
@@ -235,7 +226,8 @@ transform: translateY(10px);
 }
 
 .presentation-button:hover {
-  background-color: #5B2A36;
+  background-color: var(--color-six);
+  color: var(--color-fowr);
 }
 
 .presentation-image {
@@ -248,6 +240,9 @@ transform: translateY(10px);
   height: 128px;
   object-fit: cover;
 }
+
+
+
 /* Divider */
 .divider {
   margin-top: 3rem;
