--- a/css/talkme.css
+++ b/css/talkme.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*{
-  margin:0;
-  padding:0;
+*
+{
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
+  font-weight: 500;
 }
 
 :root{
@@ -15,8 +17,16 @@
   --color-five: #333;
   --color-six: #FFD700;
 }
-
-
+body {
+  margin: 0;
+  font-family: "Poppins", sans-serif;  
+  background-image: url('/img/logo-f.png');
+  background-size: 10%;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+}
 /* Navbar */
 .navigation {
   position: relative;
@@ -28,11 +38,11 @@
   justify-content: space-between;
 }
 .navigation img {
-  width: 250px;
-    margin: 22px;
-    padding: 12px;
-}
+width:250px;
+padding: 12px;
+margin: 22px;
 
+}
 
 
 .navigation ul{
@@ -41,10 +51,11 @@
   margin-left: 660px;
 }
 
+
 .navigation ul li{
   position: relative;
   list-style: none;
-  width: 4.5rem;
+  width: 6rem;
   height: 70px;
   z-index: 1;
 }
@@ -74,7 +85,7 @@
 }
 
 .navigation ul li:hover a .icon{
-  transform: translateY(-35px);  color: #FFD700;
+  transform: translateY(-35px);  color: var(--color-six);
 }
 
 .navigation ul li a .text{
@@ -93,7 +104,6 @@ opacity: 1;
 transform: translateY(10px);
 }
 
-
 .container {
   max-width: 100vw;
   display: flex;
@@ -104,19 +114,6 @@ transform: translateY(10px);
 
 
 
-.logo {
-  margin-left: 20px;
-  width: 10px;
-  font-size: 30px;
-  font-weight: bold;
-  color: var(--color-six);
-  text-decoration: none;
-  transition: color 0.3s;
-}
-
-.logo:hover {
-  color: var(--color-tree);
-}
 /* Seção de Contato */
 .contact-section {
   
